[package]
name = "voting"
version = "0.1.0"
description = "A simple SOL voting program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "voting"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
borsh = "1.6.0"
sha2 = "0.10.9"

[dev-dependencies]
litesvm = "=0.7.1"
solana-sdk = "2.3"
